--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color: lightgrey;
+    background-color: black;
 }
 h1
 {
@@ -16,6 +16,7 @@ font-size: 57;
     font-family: 'Shadows Into Light', cursive;
 }
 
+
 p
 {
     position: relative;
@@ -23,7 +24,20 @@ p
     font-size: 55;
 }
 
+#buttondiv
+{
+    text-align: center;
+}
+
 svg
+{
+position: relative;
+    
+margin-top: 125px;
+    color: white;
+}
+
+#newsvg
 {
 position: relative;
 margin-top: 125px;
@@ -32,13 +46,13 @@ margin-top: 125px;
 
 #lbj
 {
-   max-width: 30%;
+   max-width: 25%;
     float: left;
 }
 
 #mj
 {
-    max-width: 25%;
-    float: right;
+    max-width: 20%;
+    float: right
 
 }
